objects/LLC_BI__Roll_Up_Column__c.object
<CustomObject>
    <description>This object is used to control what columns are displayed in the Roll-Up table and what formulas drive the values that are displayed in the columns.</description>
    <fields>
        <fullName>LLC_BI__Collateral_Category__c</fullName>
        <description>This field notates what Collateral Category this column relates to. For example, if the Collateral Category is set to Real Estate and the Roll-Up table is filtering by Collateral Category = Real Estate, this column will be displayed.</description>
        <label>Collateral Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LLC_BI__Collateral_Category_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Display_Type__c</fullName>
        <description>This field controls how the values displayed in this column are formatted.</description>
        <label>Display Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>LLC_BI__Sensitivity_Analysis_Display_Type</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Formula__c</fullName>
        <description>This formula is used to calculate the column values for this column.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Formula</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Help_Text_Description__c</fullName>
        <description>If this value is filled out, then an information icon will be displayed next to the column title and when a user hovers over that icon, this help text is displayed.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Help Text Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Sort_Order__c</fullName>
        <description>Controls where this column is displayed in the Roll-Up table.</description>
        <label>Sort Order</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>The field is optional. If populated the value must be unique across all the records of this type. The field typically contains an external identifier that is used to associate the record with its matching record in an external system. The field can also be used to efficiently associate related records, when importing data into nCino, without the need to know the internal ID for the record. For more information, refer to https://developer.salesforce.com/docs/atlas.en-us.apexcode.meta/apexcode/langCon_apex_dml_nested_object.htm</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Roll-Up Column</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Roll-Up Column Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Roll-Up Columns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>